--- a/exercicios/aula12ex/ex014/estilo.css
+++ b/exercicios/aula12ex/ex014/estilo.css
@@ -19,6 +19,12 @@ section {
     margin: auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.329);
 }
+
+div {
+    text-align: center;
+    padding: 8px;
+}
+
 footer {
     color: white;
     text-align: center;
